fixed docker stuff

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ transcription/venv/
 transcription/processed_transcripts/
 transcription/translated_transcriptions/
 transcription/metadata/
+database
